@@ -15,8 +15,13 @@ gforge (3rc2-3+) unstable; urgency=low
     actually seems to work.
   * [Christian] Added {cronolog_path} in httpd.conf.template, make it fill
     by gforge-config and removed dependancy on a specific cronolog version
+  * [Roland] Fixed create-mailing-lists.pl to change the base URL of newly
+    created mailing-lists (Gforge bug #331).  Also added a
+    fix-mailing-lists.pl script to fix the previous damage.  We even run
+    this script if the previously installed version was likely to have the
+    bug.
 
- -- Roland Mas <lolando@debian.org>  Tue, 10 Jun 2003 12:09:21 +0200
+ -- Roland Mas <lolando@debian.org>  Fri, 13 Jun 2003 18:31:57 +0200
 
 gforge (3rc2-3) unstable; urgency=low
 
